--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,6 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5"
 
-
     // Lifecycle components
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
@@ -103,6 +102,9 @@ dependencies {
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //shimmer
+    implementation "com.facebook.shimmer:shimmer:0.4.0"
 
     //testing
     testImplementation 'junit:junit:4.13.1'
