--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.movie.MovieListActivity"></activity>
+        <activity
+            android:name=".presentation.review.ReviewListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".presentation.movie.MovieListActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".presentation.movie.MovieDetailActivity"
             android:screenOrientation="portrait" />
