--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,9 +82,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    //DI koin
-    implementation "org.koin:koin-android:2.1.5"
-    implementation "org.koin:koin-androidx-viewmodel:2.1.5"
+    //dagger
+    implementation "com.google.dagger:dagger:2.27"
+    implementation "com.google.dagger:dagger-android:2.27"
+    implementation "com.google.dagger:dagger-android-support:2.27"
+    kapt "com.google.dagger:dagger-android-processor:2.27"
+    kapt "com.google.dagger:dagger-compiler:2.27"
+
 
     //okhttp
     implementation "com.squareup.okhttp3:okhttp:4.3.1"
@@ -96,6 +100,7 @@ dependencies {
 
     // Lifecycle components
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.2.0"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
 
