--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,10 @@ android {
     viewBinding {
         enabled = true
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
